2012-01-23 Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSClipView.m (-constrainScrollPoint:): Restore old code
	which correctly rounded the scroll point to an integer point in
	device-space. It seems the correct code was commented out in 2002,
	perhaps as a performance optimisation?

2012-01-23 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSToolbarFrameworkPrivate.h,
	* Headers/AppKit/NSMatrix.h: Remove duplicated method declarations.
	* TextConverters/RTF/RTFProducer.h: Change docDict to NSDictionary.
	* Source/GSTheme.m,
	* Source/GSWindowDecorationView.m: Add missing type cast.
	* Headers/AppKit/NSCell.h,
	* Source/NSCell.m,
	* Source/NSButtonCell.m: Change _contents to id.
	* Source/GSNibLoading.m: Add missing import.
	* Source/NSPasteboard.m: Declare release as oneway.
	* Source/GSNibLoader.m: Change class to NSKeyedUnarchiver.
	* Source/GSXibLoader.m: Use correct printf type specifier.
	* Headers/AppKit/NSBitmapImageRep.h,
	* Source/NSBitmapImageRep.m: Change _imageData to NSData.
	Fix clang compiler warnings as reported by Sebastian Reitenbach
	<sebastia@l00-bugdead-prods.de>.

2012-01-21 Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSView.m (-setBounds:, -setBoundsOrigin:, -setBoundsSize:):
	Revert a portion of r32955 which I committed last april but I now
	see was a mistake, and I just discovered is breaking the  copy-on-scroll
	behaviour of NSClipView - we end up always redrawing the entire visible
	portion of the document view right now.

	In r32955 I added [self setNeedsDisplay: YES] calls to these methods
	even though these are documented explicitly as not marking the view for
	needing display. Approved by Fred for commit during the code freeze.

2012-01-20 German Arias <german@xelalug.org>

	* Source/GSInfoPanel.m (-initWithDictionary:): Fix bug #35335.

2012-01-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCell.m (-setStringValue:, setObjectValue:): Always use
	ASSIGNCOPY for the contents. This fixes memory leak of last
	commit.
