@@ -1,3 +1,8 @@
+2012-01-24 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSSecureTextField.m: Add GSSimpleSecureGlyphGenerator and
+	use this to generate the bullet glyphs.
+
 2012-01-23 Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* Source/NSClipView.m (-constrainScrollPoint:): Restore old code
